--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,17 +74,23 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: OpenSans
+      fonts:
+        - asset: assets/fonts/OpenSans_Condensed-SemiBold.ttf
+          weight: 700
+    - family: Cera
+      fonts: 
+        - asset: assets/fonts/ceraroundpro-black.otf
+          weight: 700
+        - asset: assets/fonts/ceraroundpro-regular.otf
+          weight: 400
+         
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
-  #
+  # #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
